cmake_minimum_required(VERSION 2.8)

PROJECT ( cartoonizer )

ADD_SUBDIRECTORY ( src )

FIND_PACKAGE ( OpenCV REQUIRED )
LINK_DIRECTORIES ( ${OpenCV_LIBRARY_DIRS} )
INCLUDE_DIRECTORIES ( ${OpenCV_INCLUDE_DIRS} )

#FIND_PACKAGE ( Boost COMPONENTS filesystem system REQUIRED )
#LINK_DIRECTORIES ( ${Boost_LIBRARY_DIRS} )
#INCLUDE_DIRECTORIES ( ${Boost_INCLUDE_DIRS} )

message("${SOURCES}")
ADD_EXECUTABLE ( cartoonizer ${SOURCES} ${HEADERS} )

TARGET_LINK_LIBRARIES( cartoonizer ${OpenCV_LIBS}) # ${Boost_LIBRARIES})

SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11" )
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wall" )
SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -g" )
#SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -D_GNU_SOURCE" )
